cabal-version:      2.4
name:               game
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             DraghiciC
maintainer:         draghici.constantin.danut@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: Sprites, Constantes, Data_Structures, React_Event, Utils, React_Time, Enemy_Filter, Map_Filter, Draw_State3D, Draw_State2D, Draw_HUD, Draw_State

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0, gloss>=1.8
    hs-source-dirs:   app
    default-language: Haskell2010
